Fix checkbox's alignment

--- a/app/assets/stylesheets/arbor_reloaded/_project_members.scss
+++ b/app/assets/stylesheets/arbor_reloaded/_project_members.scss
@@ -60,7 +60,7 @@
 
   .user-data {
     padding-right: 0;
-    transform: translateY(5%);
+    transform: translateY(10%);
 
     p {
       float: left;
